--- a/src/app/home/retail/retail-customer-in-bill/retail-customer-history-invoice/retail-customer-history-invoice.component.html
+++ b/src/app/home/retail/retail-customer-in-bill/retail-customer-history-invoice/retail-customer-history-invoice.component.html
@@ -2,7 +2,7 @@
     <app-retail-customer-history-invoice-detail [invoiceID]="item.id" [invoiceDate]="{
         createdAt: item. createdAt,
         createdBy: item.createdBy.name
-    }" role="button" (click)="SelectInvoice(item.id)">
+    }" role="button" (click)="SelectInvoice(item.id, item.barcode)">
     </app-retail-customer-history-invoice-detail>
     <nz-divider></nz-divider>
 </div>
