edit unit price

--- a/src/app/home/input/input-element/batch-tag-infomation/batch-tag-infomation.component.html
+++ b/src/app/home/input/input-element/batch-tag-infomation/batch-tag-infomation.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="batchInfo.batchId != null ; else newBatch">
   <span role="button" (click)="openModalEditBatch()" style="margin: 5px 10px 5px 5px;">{{'Lô: ' + batchInfo.batchId}} -
-    {{'Số lượng: ' + batchInfo.quantity}} {{unit}}
+    {{'Số lượng: ' + batchInfo.quantity}} {{unit.unitName}}
     - HSD: {{fullInfomationOfBatch?.expiryDate | date:'dd/MM/yyyy'}}
     - Tổng giá: {{batchInfo.totalPrice | currency:'VND'}}</span>
 </div>
 <ng-template #newBatch>
   <span role="button" (click)="openModalEditBatch()" style="margin: 5px 10px 5px 5px;">Lô: Mới tạo - {{'Số lượng: ' +
-    batchInfo.quantity}} {{unit}}
+    batchInfo.quantity}} {{unit.unitName}}
     - HSD: {{batchInfo?.batch.expiryDate | date:'dd/MM/yyyy'}}
     - Tổng giá: {{batchInfo.totalPrice | currency:'VND'}}</span>
 </ng-template>
@@ -23,7 +23,8 @@
         <nz-form-item>
           <nz-form-label [nzSm]="6" [nzXs]="24">Lô hàng</nz-form-label>
           <nz-form-control [nzSm]="17" [nzXs]="24">
-            {{batchInfo.batchId}} - {{fullInfomationOfBatch.batchBarcode}} - HSD:{{fullInfomationOfBatch.expiryDate | date:'dd/MM/yyyy'}}
+            {{batchInfo.batchId}} - {{fullInfomationOfBatch.batchBarcode}} - HSD:{{fullInfomationOfBatch.expiryDate |
+            date:'dd/MM/yyyy'}}
           </nz-form-control>
         </nz-form-item>
         <nz-form-item>
@@ -34,7 +35,10 @@
 
           <nz-form-label [nzSm]="5" [nzXs]="24">Đơn vị</nz-form-label>
           <nz-form-control [nzSm]="7" [nzXs]="24">
-            {{unit}}
+            <nz-select nzShowSearch [(ngModel)]="unit.id">
+              <nz-option *ngFor="let unit1 of listUnitProductPrice" [nzLabel]="unit1.unit" [nzValue]="unit1.id">
+              </nz-option>
+            </nz-select>
           </nz-form-control>
         </nz-form-item>
 
@@ -72,7 +76,10 @@
 
         <nz-form-label [nzSm]="5" [nzXs]="24">Đơn vị</nz-form-label>
         <nz-form-control [nzSm]="7" [nzXs]="24">
-          {{unit}}
+          <nz-select nzShowSearch [(ngModel)]="unit.id">
+            <nz-option *ngFor="let unit1 of listUnitProductPrice" [nzLabel]="unit1.unit" [nzValue]="unit1.id">
+            </nz-option>
+          </nz-select>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
